--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -123,7 +123,7 @@ table,
   font-size: 0.8rem !important;
 }
 
-.card {
+.card-ticket {
   border-color: #ee4d2d;
   border-radius: 10px;
   box-shadow: 0 1px 10px -4px rgb(255 151 32);
