--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -168,3 +168,13 @@ table {
 .custom-control-label {
   cursor: pointer;
 }
+
+#previewImg {
+  display: none;
+}
+
+.display-upload-img {
+  background: #b8b8b8;
+  width: 100%;
+  height: 180px;
+}
