--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -183,7 +183,14 @@ table {
 .display-upload-img {
   background: #b8b8b8;
   width: 100%;
-  height: 180px;
+  height: 300px;
+  display: block;
+}
+
+.display-upload-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down;
 }
 
 .form-control {
@@ -578,4 +585,16 @@ p {
 
 .table.dataTable.no-footer {
   border: none;
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(.4, 0, .6, 1) infinite;
+  filter: blur(1px);
+  -webkit-filter: blur(1px);
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .7;
+  }
 }
