--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -185,7 +185,6 @@ table {
 }
 
 .display-upload-img {
-  background: #b8b8b8;
   width: 100%;
   height: 300px;
   display: block;
@@ -651,5 +650,28 @@ p {
 }
 
 .modal-open {
-    overflow: scroll;
+  overflow: scroll;
+}
+
+.div-previewImage-user {
+  display: none;
+}
+
+.porfileDefault,
+.porfileImageDefault {
+  width: 300px;
+  height: 300px;
+  color: #fff;
+  font-size: 100px;
+}
+
+.porfileImageDefault {
+  background: rgb(255, 94, 7);
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
